# Extract

./: .pdm-python  README.md  pyproject.toml
src/Extrct.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/extrct/: .mov.py.swp  ice.py  mov.py
